DC-464 | UI | Alert Resolution (#629)
## [DC-464](https://flexgen.atlassian.net/browse/DC-464)

## Description
Adds the functionality of resolving an alert from the active alerts
table. Clicking the resolve button for an alert brings up a card where
the user can enter details about the resolution of the alert and then
mark it as resolved.

## How Has This Been Tested?
Manually tested in the UI.
