# web_apps/packages/hybridos/server/src/bff/Alerts/alerts.constants.ts
@@ -35,7 +35,8 @@ export const AlertsDescriptions = {
     sites: 'An array of all configured sites that this alert configuration pertains to',
     name: 'The name associated with the alert',
     message: 'An error or success message returned from the events service',
-    success: 'A status of whether the post request was successful returned form the events service'
+    success: 'A status of whether the request was successfully returned from the events service',
+    error_message: 'If alert could not be resolved, error message describes the issue that occurred'
 }
 
 export const mockedAlertConfigurationData: AlertConfiguration[] = [
