# web_apps/packages/hybridos/server/src/bff/Alerts/alerts.controller.ts
@@ -15,7 +15,7 @@ import {
     ApiTags,
 } from '@nestjs/swagger'
 import { AlertsService } from './alerts.service'
-import { ActiveAlertsResponse } from './responses/alerts.response'
+import { ActiveAlertsResponse, ResolveAlertResponse } from './responses/alerts.response'
 import { AlertConfigurationsResponse } from './responses/alertConfig.response'
 import { AlertsPostResponse } from './responses/alertPost.response'
 import { DefaultApiError } from 'src/exceptions/defaultResponse.exception'
@@ -23,15 +23,16 @@ import { AlertsRequest } from './dtos/alerts.dto';
 import { AlertConfigDTO } from './dtos/alertConfig.dto';
 import { UserFromAccessToken } from 'src/decorators/userFromAccessToken.decorator';
 import { User } from 'src/users/dtos/user.dto';
+import { FimsMsg } from 'src/fims/interfaces/fims.interface'
 
 @ApiTags('alerts')
 @ApiSecurity('bearerAuth')
-@ApiDefaultResponse({type: DefaultApiError})
+@ApiDefaultResponse({ type: DefaultApiError })
 @Controller('alerts')
 export class AlertsController {
-    constructor(private readonly alertsService: AlertsService) {}
+    constructor(private readonly alertsService: AlertsService) { }
     @Get('active')
-    @ApiOkResponse({type: ActiveAlertsResponse})
+    @ApiOkResponse({ type: ActiveAlertsResponse })
     @UsePipes(new ValidationPipe({ transform: true }))
     async alerts(@Query() query: AlertsRequest): Promise<ActiveAlertsResponse> {
         return await this.alertsService.activeAlerts(query)
@@ -63,5 +64,19 @@ export class AlertsController {
     ): Promise<AlertsPostResponse> {
         const addAlertConfigResponse = await this.alertsService.addNewConfig(alertConfigDTO, user.username);
         return addAlertConfigResponse;
+    }
+
+    @Post(':id')
+    @ApiOkResponse({ type: ResolveAlertResponse })
+    async resolveAlert(
+        @Param('id') id: string,
+        @Body() body: { message: string },
+        @UserFromAccessToken() user: User,
+    ): Promise<FimsMsg> {
+        return await this.alertsService.resolveAlert(
+            id,
+            body.message,
+            user.username,
+        );
     }
 }
